tests/bad/unhandled_expression_sym.oc
/// fail: Unexpected token in parse_expression: AtSign

// Previously, this was getting stuck in an infinite loop
// in the parser.

def main() {
    @
}